--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ dependencies = [
     "beautifulsoup4>=4.12.0",
     "playwright>=1.40.0",
     "claude-agent-sdk>=0.1.19",
+    "openai-agents>=0.0.3",
+    "google-adk>=0.1.0",
 ]
 
 [build-system]
@@ -117,6 +119,10 @@ module = "google.*"
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
+module = "google.adk.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
 module = "docker.*"
 ignore_missing_imports = true
 
@@ -138,6 +144,10 @@ ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = "claude_agent_sdk.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "agents.*"
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
