--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,9 @@ dev = [
     "pytest-cov>=7.0.0",
     "pytest-timeout>=2.4.0",
     "mdformat>=1.0.0",
+    "jupyter>=1.1.1",
+    "notebook>=7.5.3",
+    "nbconvert>=7.17.0",
 ]
 
 [tool.pytest.ini_options]
@@ -174,3 +177,4 @@ ignore = []
 [project.scripts]
 check = "kiss.scripts.check:main"
 algotune = "kiss.agents.kiss_evolve.algotune.run_algotune:main"
+notebook = "kiss.scripts.notebook:main"
