Add BrowserPrinter for real-time streaming output in ClaudeCodingAgent
- Introduced the BrowserPrinter class to enable real-time browser streaming output for the ClaudeCodingAgent, utilizing a local uvicorn server and SSE.
- Updated ClaudeCodingAgent to support an optional use_browser parameter, allowing for a modern dark-themed UI in the browser.
- Enhanced API.md and README.md to document the new BrowserPrinter features and usage examples.
- Implemented ConsolePrinter for terminal output formatting, ensuring consistent output across environments.
- Added comprehensive tests for BrowserPrinter and ConsolePrinter, achieving 100% branch coverage without mocks or patches.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,8 @@ dependencies = [
     "claude-agent-sdk>=0.1.19",
     "openai-agents>=0.0.3",
     "google-adk>=0.1.0",
+    "uvicorn>=0.30.0",
+    "starlette>=0.38.0",
 ]
 
 [build-system]
@@ -107,10 +109,12 @@ gemini = [
     "google-genai>=0.30.0",
 ]
 
-# Claude Coding Agent (uses claude-agent-sdk)
+# Claude Coding Agent (uses claude-agent-sdk + browser streaming)
 claude-coding-agent = [
     {include-group = "claude"},
     "claude-agent-sdk>=0.1.19",
+    "uvicorn>=0.30.0",
+    "starlette>=0.38.0",
 ]
 
 docker = [
