Add assistant configuration to pyproject.toml
- Added a new entry for the assistant in pyproject.toml to integrate the assistant chatbot functionality.
- Ensured all changes adhere to code style guidelines for clarity and maintainability.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -237,3 +237,4 @@ check = "kiss.scripts.check:main"
 algotune = "kiss.evals.algotune.run_algotune:main"
 notebook = "kiss.scripts.notebook:main"
 chatbot = "kiss.agents.coding_agents.chatbot:main"
+assistant = "kiss.agents.assistant.chatbot:main"
