Update API documentation and enhance README for clarity
- Regenerated API.md using the new `generate_api_docs.py` script, streamlining the documentation process.
- Revised the README.md to include installation instructions for launching the KISS Assistant, emphasizing required API keys.
- Added a new script entry for `generate-api-docs` in pyproject.toml to facilitate documentation generation.
- Improved clarity in various sections of the README and added a table of contents for better navigation.
- Deprecated the create_and_optimize_agent module with appropriate warnings and migration guidance.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -247,6 +247,7 @@ Repository = "https://github.com/ksen/kiss"
 
 [project.scripts]
 check = "kiss.scripts.check:main"
+generate-api-docs = "kiss.scripts.generate_api_docs:main"
 algotune = "kiss.evals.algotune.run_algotune:main"
 notebook = "kiss.scripts.notebook:main"
 assistant = "kiss.agents.assistant.assistant:main"
