--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,12 +39,8 @@ dependencies = [
     "anthropic>=0.40.0",
     "rich>=14.2.0",
     "docker>=7.0.0",
-    "types-docker>=7.1.0.20251202",
     "google-genai>=0.30.0",
     "pyyaml>=6.0.0",
-    "types-PyYAML>=6.0.0",
-    "datasets>=2.0.0",
-    "swebench>=1.0.0",
     "numpy>=1.26.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
@@ -53,8 +49,6 @@ dependencies = [
     "beautifulsoup4>=4.12.0",
     "playwright>=1.40.0",
     "claude-agent-sdk>=0.1.19",
-    "openai-agents>=0.0.3",
-    "google-adk>=0.1.0",
     "uvicorn>=0.30.0",
     "starlette>=0.38.0",
 ]
@@ -82,8 +76,8 @@ dev = [
     "jupyter>=1.1.1",
     "notebook>=7.5.3",
     "nbconvert>=7.17.0",
-    "docker>=7.0.0",
     "types-docker>=7.1.0.20251202",
+    "types-PyYAML>=6.0.0",
 ]
 
 # Minimal dependencies for kiss.core module only (no model SDKs)
@@ -91,12 +85,12 @@ core = [
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
     "pyyaml>=6.0.0",
-    "types-PyYAML>=6.0.0",
     "rich>=14.2.0",
     "requests>=2.28.0",
     "beautifulsoup4>=4.12.0",
     "playwright>=1.40.0",
-    "flask>=3.0.0",
+    "uvicorn>=0.30.0",
+    "starlette>=0.38.0",
 ]
 
 # Core + Anthropic Claude support
@@ -189,10 +183,6 @@ module = "google.*"
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
-module = "google.adk.*"
-ignore_missing_imports = true
-
-[[tool.mypy.overrides]]
 module = "docker.*"
 ignore_missing_imports = true
 
@@ -214,10 +204,6 @@ ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = "claude_agent_sdk.*"
-ignore_missing_imports = true
-
-[[tool.mypy.overrides]]
-module = "agents.*"
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
