Refactor coding agent structure and update dependencies
- Removed the ClaudeCodingAgent implementation and its associated tests to streamline the codebase.
- Updated pyproject.toml to include the datasets dependency and removed the claude-agent-sdk.
- Adjusted mypy configuration to ignore missing imports for yaml.*.
- Changed browser launch method in useful_tools.py from webkit to chromium for improved compatibility.
- Simplified return statements in finish functions to directly return YAML strings.
- Cleaned up test files by removing redundant tests related to the removed ClaudeCodingAgent.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,9 +48,9 @@ dependencies = [
     "requests>=2.28.0",
     "beautifulsoup4>=4.12.0",
     "playwright>=1.40.0",
-    "claude-agent-sdk>=0.1.19",
     "uvicorn>=0.30.0",
     "starlette>=0.38.0",
+    "datasets>=2.0.0",
 ]
 
 [build-system]
@@ -76,8 +76,6 @@ dev = [
     "jupyter>=1.1.1",
     "notebook>=7.5.3",
     "nbconvert>=7.17.0",
-    "types-docker>=7.1.0.20251202",
-    "types-PyYAML>=6.0.0",
 ]
 
 # Minimal dependencies for kiss.core module only (no model SDKs)
@@ -111,17 +109,8 @@ gemini = [
     "google-genai>=0.30.0",
 ]
 
-# Claude Coding Agent (uses claude-agent-sdk + browser streaming)
-claude-coding-agent = [
-    {include-group = "claude"},
-    "claude-agent-sdk>=0.1.19",
-    "uvicorn>=0.30.0",
-    "starlette>=0.38.0",
-]
-
 docker = [
     "docker>=7.0.0",
-    "types-docker>=7.1.0.20251202",
 ]
 
 # Evals dependencies (for running benchmarks in src/kiss/evals)
@@ -183,6 +172,10 @@ module = "google.*"
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
+module = "yaml.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
 module = "docker.*"
 ignore_missing_imports = true
 
@@ -200,10 +193,6 @@ ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = "playwright.*"
-ignore_missing_imports = true
-
-[[tool.mypy.overrides]]
-module = "claude_agent_sdk.*"
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
