--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,7 @@ dev = [
     "jupyter>=1.1.1",
     "notebook>=7.5.3",
     "nbconvert>=7.17.0",
+    "types-requests>=2.32.4.20260107",
 ]
 
 # Minimal dependencies for kiss.core module only (no model SDKs)
