Update pyproject.toml to clarify test exclusion
- Changed the comment for excluding `run_all_models_test.py` to specify that it is a standalone script, enhancing clarity for users.
- Added `collect_ignore` directive to improve test collection management.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -133,8 +133,8 @@ markers = [
 ]
 # Disable timeout so tests run without time limit
 timeout = 0
-# Quick testing (exclude run_all_models_test.py which tests ALL models):
-#   uv run pytest --ignore=src/kiss/tests/run_all_models_test.py -v
+# Exclude run_all_models_test.py (it's a standalone script, not a regular test suite)
+collect_ignore = ["src/kiss/tests/run_all_models_test.py"]
 # Full testing (includes all models):
 #   uv run pytest -v
 
