--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,17 +79,12 @@ dev = [
     "types-requests>=2.32.4.20260107",
 ]
 
-# Minimal dependencies for kiss.core module only (no model SDKs)
+# Minimal dependencies for kiss.core module only
 core = [
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
     "pyyaml>=6.0.0",
     "rich>=14.2.0",
-    "requests>=2.28.0",
-    "beautifulsoup4>=4.12.0",
-    "playwright>=1.40.0",
-    "uvicorn>=0.30.0",
-    "starlette>=0.38.0",
 ]
 
 # Core + Anthropic Claude support
@@ -108,6 +103,15 @@ openai = [
 gemini = [
     {include-group = "core"},
     "google-genai>=0.30.0",
+]
+
+# Dependencies for kiss.agents.assistant (web tools, browser UI)
+assistant = [
+    "requests>=2.28.0",
+    "beautifulsoup4>=4.12.0",
+    "playwright>=1.40.0",
+    "uvicorn>=0.30.0",
+    "starlette>=0.38.0",
 ]
 
 docker = [
